fix: alignment issue

--- a/src/app/Layouts/Admin/Dashboard-Components/profile/profile.component.css
+++ b/src/app/Layouts/Admin/Dashboard-Components/profile/profile.component.css
@@ -1,10 +1,10 @@
- .profile{
+ /* .profile{
     margin: 20px 10px;
-}
+} */
 .user-info{
-    max-width: 400px;
+    /* max-width: 400px; */
     height: 600px;
-
+    padding-top: 22px;
 } 
 .info-content{
     margin: auto;
